aws/istio-gateway/lgcms-virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: lgcms-virtualservice
  namespace: backend
spec:
  gateways:
    - istio-system/lgcms-gateway
  hosts:
    - "*"
  http:
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            regex: "^/api/.*/internal/.*"
        - uri:
            regex: "^/.*/internal/.*"
      directResponse:
        status: 403
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/auth"
        - uri:
            prefix: "/auth/"
        - uri:
            exact: "/student/auth"
        - uri:
            prefix: "/student/auth/"
        - uri:
            exact: "/lecturer/auth"
        - uri:
            prefix: "/lecturer/auth/"
        - uri:
            exact: "/admin/auth"
        - uri:
            prefix: "/admin/auth/"
        - uri:
            exact: "/api/auth"
        - uri:
            prefix: "/api/auth/"
        - uri:
            exact: "/api/student/auth"
        - uri:
            prefix: "/api/student/auth/"
        - uri:
            exact: "/api/lecturer/auth"
        - uri:
            prefix: "/api/lecturer/auth/"
        - uri:
            exact: "/api/admin/auth"
        - uri:
            prefix: "/api/admin/auth/"
      route:
        - destination:
            host: backend-auth.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/core"
        - uri:
            prefix: "/core/"
        - uri:
            exact: "/student/core"
        - uri:
            prefix: "/student/core/"
        - uri:
            exact: "/lecturer/core"
        - uri:
            prefix: "/lecturer/core/"
        - uri:
            exact: "/admin/core"
        - uri:
            prefix: "/admin/core/"
        - uri:
            exact: "/api/core"
        - uri:
            prefix: "/api/core/"
        - uri:
            exact: "/api/student/core"
        - uri:
            prefix: "/api/student/core/"
        - uri:
            exact: "/api/lecturer/core"
        - uri:
            prefix: "/api/lecturer/core/"
        - uri:
            exact: "/api/admin/core"
        - uri:
            prefix: "/api/admin/core/"
      route:
        - destination:
            host: backend-core.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/guide"
        - uri:
            prefix: "/guide/"
        - uri:
            exact: "/student/guide"
        - uri:
            prefix: "/student/guide/"
        - uri:
            exact: "/lecturer/guide"
        - uri:
            prefix: "/lecturer/guide/"
        - uri:
            exact: "/admin/guide"
        - uri:
            prefix: "/admin/guide/"
        - uri:
            exact: "/api/guide"
        - uri:
            prefix: "/api/guide/"
        - uri:
            exact: "/api/student/guide"
        - uri:
            prefix: "/api/student/guide/"
        - uri:
            exact: "/api/lecturer/guide"
        - uri:
            prefix: "/api/lecturer/guide/"
        - uri:
            exact: "/api/admin/guide"
        - uri:
            prefix: "/api/admin/guide/"
      route:
        - destination:
            host: backend-guide.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/lecture"
        - uri:
            prefix: "/lecture/"
        - uri:
            exact: "/student/lecture"
        - uri:
            prefix: "/student/lecture/"
        - uri:
            exact: "/lecturer/lecture"
        - uri:
            prefix: "/lecturer/lecture/"
        - uri:
            exact: "/admin/lecture"
        - uri:
            prefix: "/admin/lecture/"
        - uri:
            exact: "/api/lecture"
        - uri:
            prefix: "/api/lecture/"
        - uri:
            exact: "/api/student/lecture"
        - uri:
            prefix: "/api/student/lecture/"
        - uri:
            exact: "/api/lecturer/lecture"
        - uri:
            prefix: "/api/lecturer/lecture/"
        - uri:
            exact: "/api/admin/lecture"
        - uri:
            prefix: "/api/admin/lecture/"
      route:
        - destination:
            host: backend-lecture.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/member"
        - uri:
            prefix: "/member/"
        - uri:
            exact: "/student/member"
        - uri:
            prefix: "/student/member/"
        - uri:
            exact: "/lecturer/member"
        - uri:
            prefix: "/lecturer/member/"
        - uri:
            exact: "/admin/member"
        - uri:
            prefix: "/admin/member/"
        - uri:
            exact: "/api/member"
        - uri:
            prefix: "/api/member/"
        - uri:
            exact: "/api/student/member"
        - uri:
            prefix: "/api/student/member/"
        - uri:
            exact: "/api/lecturer/member"
        - uri:
            prefix: "/api/lecturer/member/"
        - uri:
            exact: "/api/admin/member"
        - uri:
            prefix: "/api/admin/member/"
      route:
        - destination:
            host: backend-member.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/lesson"
        - uri:
            prefix: "/lesson/"
        - uri:
            exact: "/student/lesson"
        - uri:
            prefix: "/student/lesson/"
        - uri:
            exact: "/lecturer/lesson"
        - uri:
            prefix: "/lecturer/lesson/"
        - uri:
            exact: "/admin/lesson"
        - uri:
            prefix: "/admin/lesson/"
        - uri:
            exact: "/api/lesson"
        - uri:
            prefix: "/api/lesson/"
        - uri:
            exact: "/api/student/lesson"
        - uri:
            prefix: "/api/student/lesson/"
        - uri:
            exact: "/api/lecturer/lesson"
        - uri:
            prefix: "/api/lecturer/lesson/"
        - uri:
            exact: "/api/admin/lesson"
        - uri:
            prefix: "/api/admin/lesson/"
      route:
        - destination:
            host: backend-lesson.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/upload"
        - uri:
            prefix: "/upload/"
        - uri:
            exact: "/student/upload"
        - uri:
            prefix: "/student/upload/"
        - uri:
            exact: "/lecturer/upload"
        - uri:
            prefix: "/lecturer/upload/"
        - uri:
            exact: "/admin/upload"
        - uri:
            prefix: "/admin/upload/"
        - uri:
            exact: "/api/upload"
        - uri:
            prefix: "/api/upload/"
        - uri:
            exact: "/api/student/upload"
        - uri:
            prefix: "/api/student/upload/"
        - uri:
            exact: "/api/lecturer/upload"
        - uri:
            prefix: "/api/lecturer/upload/"
        - uri:
            exact: "/api/admin/upload"
        - uri:
            prefix: "/api/admin/upload/"
      route:
        - destination:
            host: backend-upload.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/consulting"
        - uri:
            prefix: "/consulting/"
        - uri:
            exact: "/student/consulting"
        - uri:
            prefix: "/student/consulting/"
        - uri:
            exact: "/lecturer/consulting"
        - uri:
            prefix: "/lecturer/consulting/"
        - uri:
            exact: "/admin/consulting"
        - uri:
            prefix: "/admin/consulting/"
        - uri:
            exact: "/api/consulting"
        - uri:
            prefix: "/api/consulting/"
        - uri:
            exact: "/api/student/consulting"
        - uri:
            prefix: "/api/student/consulting/"
        - uri:
            exact: "/api/lecturer/consulting"
        - uri:
            prefix: "/api/lecturer/consulting/"
        - uri:
            exact: "/api/admin/consulting"
        - uri:
            prefix: "/api/admin/consulting/"
      route:
        - destination:
            host: backend-consulting.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/leveltest"
        - uri:
            prefix: "/leveltest/"
        - uri:
            exact: "/student/leveltest"
        - uri:
            prefix: "/student/leveltest/"
        - uri:
            exact: "/lecturer/leveltest"
        - uri:
            prefix: "/lecturer/leveltest/"
        - uri:
            exact: "/admin/leveltest"
        - uri:
            prefix: "/admin/leveltest/"
        - uri:
            exact: "/api/leveltest"
        - uri:
            prefix: "/api/leveltest/"
        - uri:
            exact: "/api/student/leveltest"
        - uri:
            prefix: "/api/student/leveltest/"
        - uri:
            exact: "/api/lecturer/leveltest"
        - uri:
            prefix: "/api/lecturer/leveltest/"
        - uri:
            exact: "/api/admin/leveltest"
        - uri:
            prefix: "/api/admin/leveltest/"
      route:
        - destination:
            host: backend-leveltest.backend.svc.cluster.local
            port:
              number: 8080
    - corsPolicy:
        allowCredentials: false
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowMethods:
          - GET
          - POST
          - PUT
          - DELETE
          - PATCH
          - OPTIONS
        allowOrigins:
          - exact: "*"
        maxAge: "24h"
      match:
        - uri:
            exact: "/payment"
        - uri:
            prefix: "/payment/"
        - uri:
            exact: "/student/payment"
        - uri:
            prefix: "/student/payment/"
        - uri:
            exact: "/lecturer/payment"
        - uri:
            prefix: "/lecturer/payment/"
        - uri:
            exact: "/admin/payment"
        - uri:
            prefix: "/admin/payment/"
        - uri:
            exact: "/api/payment"
        - uri:
            prefix: "/api/payment/"
        - uri:
            exact: "/api/student/payment"
        - uri:
            prefix: "/api/student/payment/"
        - uri:
            exact: "/api/lecturer/payment"
        - uri:
            prefix: "/api/lecturer/payment/"
        - uri:
            exact: "/api/admin/payment"
        - uri:
            prefix: "/api/admin/payment/"
      route:
        - destination:
            host: backend-payment.backend.svc.cluster.local
            port:
              number: 8080
